--- a/index.html
+++ b/index.html
@@ -6,12 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js-es6-icons</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <header>
+        <section class="container-fluid">
+            <h1 class="header-title mt-3">FontIcons</h1>
+        </section>
+    </header>
+    <main>
+        <div class="d-flex container-fluid align-items-center justify-content-center blue-bg py-4">
+            <label for="select-difficolta" class="pe-3 fw-bold text-white fs-3">FILTRA PER TIPO</label>
+            <select class="form-select my-nav-color form-select-width" aria-label="Floating label select example"
+                id="filter_select">
+                <option value="all" selected="selected">All</option>
+                <option value="animal">Animal</option>
+                <option value="vegetable">Vegetable</option>
+                <option value="user">User</option>
+            </select>
+        </div>
+
+        <section class="container-fluid">
+            <div class="row row-cols-5 icon-container pt-5 g-3"></div>
+        </section>
+
+    </main>
 
 
+    <!-- COLLEGAMENTO JS -->
     <script src="js/data.js"></script>
 </body>
 
