--- a/index.html
+++ b/index.html
@@ -6,34 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js-es6-icons</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
+
     <header>
-        <section class="container-fluid">
-            <h1 class="header-title mt-3">FontIcons</h1>
-        </section>
-    </header>
-    <main>
-        <div class="d-flex container-fluid align-items-center justify-content-center blue-bg py-4">
-            <label for="select-difficolta" class="pe-3 fw-bold text-white fs-3">FILTRA PER TIPO</label>
-            <select class="form-select my-nav-color form-select-width" aria-label="Floating label select example"
-                id="filter_select">
-                <option value="all" selected="selected">All</option>
+        <div class="sopra">
+            <h1>FontIcons</h1>
+        </div>
+        <nav>
+            <span>filtra per tipo</span>
+            <select name="type-filter" id="type-filter">
+                <option value="all">All</option>
                 <option value="animal">Animal</option>
                 <option value="vegetable">Vegetable</option>
                 <option value="user">User</option>
             </select>
-        </div>
-
-        <section class="container-fluid">
-            <div class="row row-cols-5 icon-container pt-5 g-3"></div>
-        </section>
-
-    </main>
+        </nav>
+    </header>
 
 
     <!-- COLLEGAMENTO JS -->
