--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-
     <header>
         <div class="sopra">
             <h1>FontIcons</h1>
@@ -29,10 +28,18 @@
             </select>
         </nav>
     </header>
-
+    <main>
+        <div id="container">
+            <!-- <div class="card">
+                    <i class="fas fa-cat"></i>
+                    <span>cat</span>
+                </div> -->
+        </div>
+    </main>
 
     <!-- COLLEGAMENTO JS -->
     <script src="js/data.js"></script>
+
 </body>
 
 </html>
